--- a/lab3/style.css
+++ b/lab3/style.css
@@ -3,16 +3,16 @@ body {
 }
 
 #weather label {
-  /* TODO: Make label stack on top of input */
+  display: block;
   text-align: center;
   margin-bottom: 0.1em;
   font-weight: bold;
 }
 
 #weather input {
-  /* TODO: Make input be centered and stack on top of the button */
+  display: block;
   margin: 0 auto;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
   padding: 0.25em;
   font-size: 1.1em;
 }
@@ -20,13 +20,18 @@ body {
 #weather button {
   display: block;
   margin: 0 auto;
-  /* TODO:
-   * Make a solid border of one pixel width and color #008, and set the
-   * background color to #aaccff
-   */
+  border: 1px solid #008;
+  border-radius: 4px;
+  background-color: #aaccff;
   padding: 0.5em 2.5em;
   font-size: 0.9em;
   font-weight: bold;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+#weather button:hover {
+  cursor: pointer;
 }
 
 #response {
