--- a/lab3/style.css
+++ b/lab3/style.css
@@ -37,7 +37,7 @@ body {
 #response {
   border: 1px solid #000;
   margin: 0 auto;
-  /* TODO: Make the width of this div only 50% of the screen */
+  width: 50%;
   padding: 0.5em;
 }
 
